Serifu.Web/Assets/results.css
.results {
  list-style: none;
  margin: 2em 0;
  padding: 0;
}

.quote {
  display: grid;
  grid-template: 'left-actions left-quote .      right-actions right-quote' auto
                 'source       source     source source        source     ' auto
                 / 1em minmax(0, 1fr) 1em 1em minmax(0, 1fr);
  gap: 0.6em 0.8em;
  overflow-wrap: break-word;

  & + & {
    margin-top: 2em;
  }

  > :nth-child(1) .translation-actions { grid-area: left-actions; }
  > :nth-child(1) .translation-quote { grid-area: left-quote; }
  > :nth-child(2) .translation-actions { grid-area: right-actions; }
  > :nth-child(2) .translation-quote { grid-area: right-quote; }

  .translation {
    /* The wrapping div exists to apply an aria-label to the group for screen readers */
    display: contents;
  }

  .translation-actions {
    --click-area-padding: 0.18em;
    --button-spacing: calc(1lh - 1em);

    display: flex;
    flex-direction: column;
    padding-top: calc(var(--button-spacing) / 2);

    button, audio-button {
      display: flex;
      justify-content: center;
      align-items: center;
      border: none;
      background: none;
      font: inherit;
      color: inherit;
      cursor: pointer;
      padding: 0;
      width: calc(1em + (var(--click-area-padding) * 2));
      height: calc(1em + (var(--click-area-padding) * 2));
      margin: calc(var(--click-area-padding) * -1);
      opacity: 0.75;

      &:not(:first-child) {
        margin-top: calc(var(--click-area-padding) * -1 + var(--button-spacing));
      }

      span {
        display: block;
        font-size: 1.1em;
      }
    }
  }

  .translation-quote {
    --quote-mark-spacing: 0.18ch;

    position: relative;
    padding-left: calc(1ch + var(--quote-mark-spacing));

    blockquote {
      margin: 0;

      &:lang(en) {
        quotes: '“' '”';
      }

      &:lang(ja) {
        quotes: '｢' '｣'; /* Halfwidth */
      }

      &::before {
        content: open-quote;
        position: absolute;
        left: 0;
      }

      &::after {
        content: close-quote;
        padding-left: var(--quote-mark-spacing);
      }
    }

    cite {
      display: block;
      font-style: normal;
      margin-top: 0.5em;

      &::before {
        content: '～ ';
        font-family: 'Noto Serif JP', serif;
        font-size-adjust: none;
      }
    }
  }

  .translation-notes {
    padding: calc(1.5em - 0.5lh) 1em;

    @supports (position-area: span-bottom right) {
      @media (min-width: 500px) {
        margin: 0 0.5em;
        width: min(600px, 85vw);
        max-width: max-content;
      }

      /* Right side of two-column layout; button is in the middle of the page, so the popover needs to be smaller */
      @media (width > 750px) {
        .translation:not(:first-child) & {
          width: min(600px, 45vw);
          position-area: span-bottom left;
        }
      }
    }
  }

  .source {
    grid-area: source;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-family: sans-serif;
    font-variant-numeric: normal;
    font-size: 0.75em;
    font-size-adjust: none;
    color: rgb(from currentcolor r g b / 75%); /* Keeps active color fully opaque, as opposed to setting opacity */
  }

  .game-icon {
    font-size: 14px;
    opacity: 0.75;
    margin-top: 1px;
  }

  .source-title {
    all: unset;
    outline: revert; /* Keyboard focus */
    cursor: pointer;
    text-decoration: underline;
    text-underline-offset: 2px;
    margin: 0 0.8em 0 0.4em;

    &:active {
      color: var(--active-link-color);
    }
  }

  .source-copyright span:lang(en) {
    font-size: 0.85em;
  }

  .source-links {
    padding: 0.5em 0;
    min-width: 250px;
    text-align: left;

    a {
      display: block;
      padding: 1em 2em;
      color: inherit;
      text-decoration: none;
      line-height: 1;
    }

    a:hover, a:focus {
      background: var(--menu-hover-background);
      outline: none;
    }

    @supports (position-area: span-bottom left) {
      @media (min-width: 500px) {
        margin: 0 20px 0 0;
        padding: 0.25em 0;
        min-width: 125px;
        position-area: span-bottom left;

        a {
          padding: 0.5em 1em;
        }
      }
    }
  }

  @media (max-width: 750px) {
    grid-template: 'left-quote  left-actions ' auto
                   'right-quote right-actions' auto
                   'source      source       ' auto
                   / 1fr 1em;
  }
}

